Add integration tests

--- a/docs/src/index.adoc
+++ b/docs/src/index.adoc
@@ -17,4 +17,4 @@ endif::backend-html5[]
 
 include::./includes/DEVELOPER_GUIDE.adoc[]
 include::./includes/REST_API_DOCUMENTATION.adoc[]
-
+include::./includes/TESTING.adoc[]
