--- a/docs/src/includes/DEVELOPER_GUIDE.adoc
+++ b/docs/src/includes/DEVELOPER_GUIDE.adoc
@@ -3,13 +3,19 @@
 
 === Setup development environment
 
-TODO: Describe requirements and software to be installed (JDK, Docker, HTTPie etc...)
+JDK 8, Docker, nodejs, npm, HTTPie should be installed
 
 === build, run and test with Docker
+build
 
-[source,bash]
+[source, cmd]
 ----
-mvnw -pl :backend & mvnw -pl docker -P up
+mvnw
+----
+run
+[source, cmd]
+----
+mvnw -f docker\pom.xml -P up
 
 http    get :8080/blog/api
 http    get :8080/blog/api/v1/posts/find-all
@@ -17,10 +23,18 @@ http   post :8080/blog/api/v1/posts/create     title=title body=ololo
 http   post :8080/blog/api/v1/posts/find-by-id id=00000000-0000-0000-0000-000000000000
 http    put :8080/blog/api/v1/posts/update     id=00000000-0000-0000-0000-000000000000 title=title body=trololo
 http delete :8080/blog/api/v1/posts/delete     id=00000000-0000-0000-0000-000000000000
-
-mvnw -pl :docker -P down
 ----
-
+test
+[source, cmd]
+----
+mvnw -f docker\pom.xml -P ci-up
+mvnw -f integration-tests\pom.xml -P it
+----
+cleanup
+[source, cmd]
+----
+mvnw -f docker\pom.xml -P ci-down
+----
 === Documentation
 === run and test
 
