--- a/docs/src/includes/REST_API_DOCUMENTATION.adoc
+++ b/docs/src/includes/REST_API_DOCUMENTATION.adoc
@@ -2,191 +2,160 @@
 == REST API documentation
 
 === Show API description
-[cols="30%,70%"]
-|===
-|*Title* |*Show API description*
 
-Returns json data with API description.
+[source, cmd]
+----
+request: http get :80/blog/api
 
-|*URL*
-| `/api`
+HTTP/1.1 200 OK
+Content-Length: 582
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:09:28 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*Method*
-|`GET/POST`
+.response
 
-|*URL Params*
-|*Required:*
+[source, json]
+----
+{
+    " _self           ": "http://localhost/blog/api",
+    " create post     ": "http://localhost/blog/api/v1/posts/create     title={markdown} body={markdown}",
+    " find all posts  ": "http://localhost/blog/api/v1/posts/find-all",
+    " find post by id ": "http://localhost/blog/api/v1/posts/find-by-id id={uuid}",
+    " health status   ": "http://localhost/blog/api/health",
+    " remove posts    ": "http://localhost/blog/api/v1/posts/delete     id={uuid}",
+    " update posts    ": "http://localhost/blog/api/v1/posts/update     id={uuid} title={markdown} body={markdown}"
+}
+----
 
-None
-|*Data Params*
-|None
-
-|*Success Response*
-|*Code:* 200 OK
-
-*Content:* ``{
-               "links": {
-                   "_self              ": "http://localhost:8080/blog/api",
-                   "create post:       ": "http://localhost:8080/blog/api/v1/posts/create  title={markdown} body={markdown}",
-                   "find all posts     ": "http://localhost:8080/blog/api/v1/posts/find-all",
-                   "find post by id    ": "http://localhost:8080/blog/api/v1/posts/find-by-id id={uuid}",
-                   "health status      ": "http://localhost:8080/blog/api/health",
-                   "update posts:      ": "http://localhost:8080/blog/api/v1/posts/update id={uuid}"
-                   "remove posts:      ": "http://localhost:8080/blog/api/v1/posts/delete id={uuid} title={markdown} body={markdown}"
-               }
-           } ``
-|===
 === Create new post
-[cols="30%,70%"]
-|===
-|*Title* |*Create new post*
 
-Returns location of created post.
+[source, cmd]
+----
+request: http   post :80/blog/api/v1/posts/create title=title body=ololo
 
-|*URL*
-| `/api/v1/posts/create`
+HTTP/1.1 201 Created
+Content-Length: 116
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:17:31 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*Method*
-|`POST`
+.response
 
-|*URL Params*
-|*Required:*
-
-|None
-|*Data Params*
-
-`title=[String]  body=[String]`
-
-|*Success Response*
-|*Code:* 201 Created
-
-*Content:* ``{} ``
-
-*Location:* `/blogapiv1postscreateid=:id`
-|===
+[source, json]
+----
+{
+    "body": "ololo",
+    "id": "7e362115-7b8a-4ba2-9887-25b50eaf4785",
+    "lastModifiedAt": "2019.03.01 16:17 GMT",
+    "title": "title"
+}
+----
 
 === Show all posts
-[cols="30%,70%"]
-|===
-|*Title* |*Show all posts*
 
-Returns json data of all posts.
+[source, cmd]
+----
+request: http get :80/blog/api/v1/posts/find-all
 
+HTTP/1.1 200 OK
+Content-Length: 32394
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:17:47 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*URL*
-| `/api/v1/posts/find-all`
+.response
 
-|*Method*
-|`GET/POST`
-
-|*URL Params*
-|*Required:*
-
-None
-|*Data Params*
-|None
-|*Success Response*
-|*Code:* 200 OK
-
-*Content:*
+[source, json]
+----
 [
     {
         "body": "ololo",
-        "id": "674b289d-1f3f-4285-beef-79e27772b3e6",
-        "lastModifiedAt": "2019.02.15 15:30 GMT",
+        "id": "7e362115-7b8a-4ba2-9887-25b50eaf4785",
+        "lastModifiedAt": "2019.03.01 16:17 GMT",
         "title": "title"
-    }
+    },
+    {
+        "body": "##Hello \n\n```java\n// comment\n```\n",
+        "id": "54e84f54-6366-4683-a9cf-d8240a58ebb1",
+        "lastModifiedAt": "2019.03.01 16:01 GMT",
+        "title": "8 Hello Java"
+    },
+    ...
 ]
-|===
+----
+
 === Show one post
-[cols="30%,70%"]
-|===
-|*Title* |*Show one post*
 
-Returns json data of one post.
+[source, cmd]
+----
+request: http   post :80/blog/api/v1/posts/find-by-id id=7e362115-7b8a-4ba2-9887-25b50eaf4785
 
-|*URL*
-| `/api/v1/posts/find-by-id`
+HTTP/1.1 200 OK
+Content-Length: 116
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:28:34 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*Method*
-|`GET/POST`
+.response
 
-|*URL Params*
-|*Required:*
-
-None
-|*Data Params*
-|`id=[UUID]`
-|*Success Response*
-|*Code:* 200 OK
-
-*Content:* ``
+[source, json]
+----
 {
     "body": "ololo",
-    "id": "674b289d-1f3f-4285-beef-79e27772b3e6",
-    "lastModifiedAt": "2019.02.15 15:30 GMT",
+    "id": "7e362115-7b8a-4ba2-9887-25b50eaf4785",
+    "lastModifiedAt": "2019.03.01 16:17 GMT",
     "title": "title"
 }
- ``
-|===
+----
+
 === Edit post
-[cols="30%,70%"]
-|===
-|*Title* |*Show one edited post*
 
-Returns json data of one edited post.
+[source, cmd]
+----
+request: http    put :80/blog/api/v1/posts/update     id=7e362115-7b8a-4ba2-9887-25b50eaf4785 title=title body=trololo
 
-|*URL*
-| `/api/v1/posts/update`
+HTTP/1.1 200 OK
+Content-Length: 118
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:31:10 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*Method*
-|`PUT`
+.response
 
-|*URL Params*
-|*Required:*
-
-None
-|*Data Params*
-|`id=[UUID]`
-
-`title=[String] body=[String]`
-|*Success Response*
-|*Code:* 200 OK
-
-*Content:* ``
+[source, json]
+----
 {
     "body": "trololo",
-    "id": "674b289d-1f3f-4285-beef-79e27772b3e6",
-    "lastModifiedAt": "2019.02.15 15:58 GMT",
+    "id": "7e362115-7b8a-4ba2-9887-25b50eaf4785",
+    "lastModifiedAt": "2019.03.01 16:31 GMT",
     "title": "title"
 }
- ``
-|===
+----
+
 === Delete post
-[cols="30%,70%"]
-|===
-|*Title* |*Show one post*
 
-Returns json data of one post.
+[source, cmd]
+----
+request: http delete :80/blog/api/v1/posts/delete id=7e362115-7b8a-4ba2-9887-25b50eaf4785
 
-|*URL*
-| `/api/v1/posts/delete`
+HTTP/1.1 200 OK
+Content-Length: 78
+Content-Type: application/json;charset=UTF-8
+Date: Fri, 01 Mar 2019 16:34:11 GMT
+Server: Apache-Coyote/1.1
+----
 
-|*Method*
-|`DELETE`
+.response
 
-|*URL Params*
-|*Required:*
-
-None
-|*Data Params*
-|`id=[UUID]`
-|*Success Response*
-|*Code:* 200 OK
-
-*Content:* ``
+[source, json]
+----
 {
-    "message": "Post with id '674b289d-1f3f-4285-beef-79e27772b3e6' was removed."
+    "message": "Post with id '7e362115-7b8a-4ba2-9887-25b50eaf4785' was removed."
 }
- ``
-|===
+----
